--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bson": "^6.6.0",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^11.0.28",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
